Added document type choice

--- a/pdf/static/css/pdf.css
+++ b/pdf/static/css/pdf.css
@@ -42,3 +42,14 @@ section#course-content.course-content {
     position: relative;
     height: 600px;
 }
+
+.wrapper-comp-settings input[type=radio] {
+    width:10px !important;
+    height:10px !important;
+}
+
+.wrapper-comp-settings .document-type-label {
+    position: relative;
+    top: 2px;
+    margin-right: 6px;
+}
